--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "teste-api-ebac",
   "version": "1.0.0",
-  "description": "",
+  "description": "-Node.js - Você encontra em: https://nodejs.org/en/",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
